--- a/app/views/files/new.html.erb
+++ b/app/views/files/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with url: zipper_index_url, multipart: true do |form| %>
+<%= form_with url: files_url, multipart: true do |form| %>
   <%= form.file_field :files, multiple: true %>
   <%= form.submit 'Upload Picture' %>
 <% end %>
